--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "android-release": "react-native run-android --variant=release",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -12,7 +10,15 @@
     "postinstall": "react-native setup-ios-permissions patch-package",
     "start-rc": "yarn start --resetCache",
     "clean": "cd android && ./gradlew clean && cd ..",
-    "build-android": "cd android && ./gradlew app:assembleRelease"
+    "android": "react-native run-android --mode developmentdebug",
+    "android-release": "react-native run-android --mode developmentrelease",
+    "android:staging": "ENVFILE=.env.staging && react-native run-android --mode stagingdebug",
+    "android:staging-release": "ENVFILE=.env.staging && react-native run-android --mode stagingrelease",
+    "android:prod": "ENVFILE=.env.production && react-native run-android --mode productiondebug",
+    "android:prod-release": "ENVFILE=.env.production && react-native run-android --mode productionrelease",
+    "build": "cd android && ./gradlew assembleRelease && cd ..",
+    "build:staging": "cd android && ENVFILE=.env.staging && ./gradlew assembleRelease && cd ..",
+    "build:prod": "cd android && ENVFILE=.env.production && ./gradlew assembleRelease && cd .."
   },
   "reactNativePermissionsIOS": [
     "Notifications",
@@ -45,6 +51,7 @@
     "react-native": "0.73.8",
     "react-native-circular-progress": "^1.4.0",
     "react-native-code-push": "^8.2.2",
+    "react-native-config": "^1.5.1",
     "react-native-date-picker": "^5.0.2",
     "react-native-device-info": "^10.13.2",
     "react-native-fast-image": "^8.6.3",
@@ -53,6 +60,7 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-keychain": "8.1.3",
     "react-native-modal": "^13.0.1",
+    "react-native-network-logger": "^1.16.1",
     "react-native-pager-view": "^6.3.1",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-svg": "^6.3.1",
@@ -60,6 +68,7 @@
     "react-native-render-html": "^4.2.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-shake": "^5.6.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
