--- a/ios/SomeApp.xcodeproj/xcshareddata/xcschemes/SomeApp Dev.xcscheme
+++ b/ios/SomeApp.xcodeproj/xcshareddata/xcschemes/SomeApp Dev.xcscheme
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1540"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <PreActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.production&quot; &quot;${PROJECT_DIR}/../.env.production&quot;&#10;echo &quot;.env.production&quot; &gt; /tmp/envfile&#10;">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env&quot; &quot;${PROJECT_DIR}/../.env&quot;&#10;echo &quot;.env&quot; &gt; /tmp/envfile&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-                     BuildableName = "SomeApp.app"
-                     BlueprintName = "SomeApp"
+                     BlueprintIdentifier = "CEDAC28A2BFAF3F400FBE26F"
+                     BuildableName = "SomeApp Dev.app"
+                     BlueprintName = "SomeApp Dev"
                      ReferencedContainer = "container:SomeApp.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
@@ -32,9 +33,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SomeApp.app"
-               BlueprintName = "SomeApp"
+               BlueprintIdentifier = "CEDAC28A2BFAF3F400FBE26F"
+               BuildableName = "SomeApp Dev.app"
+               BlueprintName = "SomeApp Dev"
                ReferencedContainer = "container:SomeApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,19 +45,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SomeAppTests.xctest"
-               BlueprintName = "SomeAppTests"
-               ReferencedContainer = "container:SomeApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -73,13 +63,13 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.production&quot; &quot;${PROJECT_DIR}/../.env.production&quot;&#10;echo &quot;.env.production&quot; &gt; /tmp/envfile&#10;">
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env&quot; &quot;${PROJECT_DIR}/../.env&quot;&#10;echo &quot;.env&quot; &gt; /tmp/envfile&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-                     BuildableName = "SomeApp.app"
-                     BlueprintName = "SomeApp"
+                     BlueprintIdentifier = "CEDAC28A2BFAF3F400FBE26F"
+                     BuildableName = "SomeApp Dev.app"
+                     BlueprintName = "SomeApp Dev"
                      ReferencedContainer = "container:SomeApp.xcodeproj">
                   </BuildableReference>
                </EnvironmentBuildable>
@@ -90,9 +80,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SomeApp.app"
-            BlueprintName = "SomeApp"
+            BlueprintIdentifier = "CEDAC28A2BFAF3F400FBE26F"
+            BuildableName = "SomeApp Dev.app"
+            BlueprintName = "SomeApp Dev"
             ReferencedContainer = "container:SomeApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -107,9 +97,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SomeApp.app"
-            BlueprintName = "SomeApp"
+            BlueprintIdentifier = "CEDAC28A2BFAF3F400FBE26F"
+            BuildableName = "SomeApp Dev.app"
+            BlueprintName = "SomeApp Dev"
             ReferencedContainer = "container:SomeApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
