--- a/ios/SomeApp.xcodeproj/xcshareddata/xcschemes/SomeApp Stag.xcscheme
+++ b/ios/SomeApp.xcodeproj/xcshareddata/xcschemes/SomeApp Stag.xcscheme
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "1540"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <PreActions>
          <ExecutionAction
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.production&quot; &quot;${PROJECT_DIR}/../.env.production&quot;&#10;echo &quot;.env.production&quot; &gt; /tmp/envfile&#10;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-                     BuildableName = "SomeApp.app"
-                     BlueprintName = "SomeApp"
-                     ReferencedContainer = "container:SomeApp.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.staging&quot; &quot;${PROJECT_DIR}/../.env.staging&quot;&#10;echo &quot;.env.staging&quot; &gt; /tmp/envfile&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
@@ -32,9 +24,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "SomeApp.app"
-               BlueprintName = "SomeApp"
+               BlueprintIdentifier = "CEDAC29D2BFAF3F800FBE26F"
+               BuildableName = "SomeApp Stag.app"
+               BlueprintName = "SomeApp Stag"
                ReferencedContainer = "container:SomeApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,19 +36,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "SomeAppTests.xctest"
-               BlueprintName = "SomeAppTests"
-               ReferencedContainer = "container:SomeApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -73,16 +54,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.production&quot; &quot;${PROJECT_DIR}/../.env.production&quot;&#10;echo &quot;.env.production&quot; &gt; /tmp/envfile&#10;">
-               <EnvironmentBuildable>
-                  <BuildableReference
-                     BuildableIdentifier = "primary"
-                     BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-                     BuildableName = "SomeApp.app"
-                     BlueprintName = "SomeApp"
-                     ReferencedContainer = "container:SomeApp.xcodeproj">
-                  </BuildableReference>
-               </EnvironmentBuildable>
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cp &quot;${PROJECT_DIR}/../.env.staging&quot; &quot;${PROJECT_DIR}/../.env.staging&quot;&#10;echo &quot;.env.staging&quot; &gt; /tmp/envfile&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
@@ -90,9 +62,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SomeApp.app"
-            BlueprintName = "SomeApp"
+            BlueprintIdentifier = "CEDAC29D2BFAF3F800FBE26F"
+            BuildableName = "SomeApp Stag.app"
+            BlueprintName = "SomeApp Stag"
             ReferencedContainer = "container:SomeApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -107,9 +79,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "SomeApp.app"
-            BlueprintName = "SomeApp"
+            BlueprintIdentifier = "CEDAC29D2BFAF3F800FBE26F"
+            BuildableName = "SomeApp Stag.app"
+            BlueprintName = "SomeApp Stag"
             ReferencedContainer = "container:SomeApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
